[package]
name = "iron-sessionstorage"
version = "0.2.1"

authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"
keywords = ["iron", "sessions", "cookie", "user", "login"]
readme = "README.md"

description = "Basic session middleware for Iron."
repository = "https://github.com/untitaker/iron-sessionstorage"
homepage = "https://github.com/untitaker/iron-sessionstorage"

[dependencies]
iron = "0.4"
cookie = { version = "0.2.2", features = ["secure"] }
error-chain = "0.5"
rand = "0.3"

redis = { version = "0.7.0", optional = true }
r2d2_redis = { version = "0.5.0", optional = true }
r2d2 = { version = "0.7.1", optional = true }

[features]
redis-backend = ["redis", "r2d2_redis", "r2d2"]
